tests/ui/transmutability/references/unit-to-u8.stderr
error[E0277]: `Unit` cannot be safely transmuted into `u8` in the defining scope of `assert::Context`
  --> $DIR/unit-to-u8.rs:23:52
   |
LL |     assert::is_maybe_transmutable::<&'static Unit, &'static u8>();
   |                                                    ^^^^^^^^^^^ The size of `Unit` is smaller than the size of `u8`
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/unit-to-u8.rs:10:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
